// Copyright 2026 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.beams.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/beams/v1;beamsv1";

// BeamsService enables users to create ephemeral AI-optimized compute
// environments called "beams".
service BeamsService {
  // CreateBeam creates a new beam.
  rpc CreateBeam(CreateBeamRequest) returns (Beam);
}

// CreateBeamRequest contains the parameters to CreateBeam.
message CreateBeamRequest {}

// Beam is an ephemeral AI-optimized compute environment.
message Beam {
  // ID uniquely identifies the beam.
  string id = 1;
}
